first website modifciation test

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 					<header id="header" style="display: flex;">
 						<div class="content">
 							<div class="inner">
-								<h1>3DOF STEWART PLATFORM</h1>
+								<h1>Robotic Rubik's Cube Solver</h1>
 								<p> <a href="http://www.microgoats.life">TEAM MICROGOATS</a>: </p>
 								<p> ADAM WELD <br> PADRAIG LYSANDROU  <br> ERIC BERG </p>
 								<p> AN ECE4760: MICROCONTROLLERS FINAL PROJECT</p>        
