--- a/Website/index.html
+++ b/Website/index.html
@@ -203,62 +203,55 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>PIC32MX250F128B + Big Board</td>
-												<td>$15.00</td>
+												<td><a href="https://www.target.com/p/raspberry-pi-3-model-b-project-board/-/A-53349740?ref=tgt_adv_XS000000&AFID=google_pla_df&fndsrc=tgtao&CPNG=PLA_Electronics%2BShopping_Local&adgroup=SC_Electronics&LID=700000001170770pgs&network=g&device=c&location=9005781&gclsrc=aw.ds&ds_rl=1246978&ds_rl=1248099&ds_rl=1246978&ref=tgt_adv_XS000000&AFID=google_pla_df&CPNG=PLA_Electronics+Shopping_Local&adgroup=SC_Electronics&LID=700000001170770pgs&network=g&device=c&location=9005781&gclid=CjwKCAiA9K3gBRA4EiwACEhFe2paAteukKyXdrkntnY0GHw7-C34lBivyRuI_dnDLTUv5O0j9G5KwBoC50QQAvD_BwE&gclsrc=aw.ds">Raspberry Pi</a></td>
+												<td>$34.99</td>
 												<td>1</td>
-                                                <td>$15.00</td>
+                                                <td>$34.99</td>
 											</tr>
 											<tr>
-												<td>MicroStickII</td>
-												<td>$1.00</td>
+												<td><a href="https://www.amazon.com/gp/product/B06XH9Y2XJ/ref=oh_aui_detailpage_o00_s00?ie=UTF8&psc=1">Rubik Cube</a></td>
+												<td>$7.89</td>
 												<td>1</td>
-                                                <td>$1.00</td>
+                                                <td>$7.89</td>
 											</tr>
 											<tr>
-												<td>TFT LCD</td>
-												<td>$10.00</td>
+												<td><a href="https://www.ebay.com/itm/5x-StepStick-DRV8825-Stepper-Motor-Driver-Module-for-3D-Printer-Reprap-RP-A4988/263902363753?ssPageName=STRK%3AMEBIDX%3AIT&_trksid=p2060353.m2749.l2649">Polular DRV8825 Stepper Drivers (5pk)</a></td>
+												<td>$13.08</td>
 												<td>1</td>
-                                                <td>$10.00</td>
+                                                <td>$13.08</td>
 											</tr>
 											<tr>
-												<td>BreadBoard</td>
-												<td>$6.00</td>
+												<td><a href="https://www.ebay.com/itm/US-Ship-Nema-17-Stepper-Motor-37oz-in-12V-0-4A-3D-Pinter-Reprap-Arduino-DIY-CNC/331601550532?ssPageName=STRK%3AMEBIDX%3AIT&_trksid=p2060353.m2749.l2649">NEMA 17 steppers</a>></td>
+												<td>$7.00</td>
+												<td>4</td>
+                                                <td>$28.10</td>
+											</tr>
+											<tr>
+												<td><a href="https://www.ebay.com/itm/DC12V-2A-20N-10mm-Pull-Push-Type-Linear-Motion-Solenoid-Electromagnet/263433211357?ssPageName=STRK%3AMEBIDX%3AIT&_trksid=p2060353.m2749.l2649">Solenoids</a></td>
+												<td>$6.72 </td>
+												<td>4</td>
+                                                <td>$26.88</td>
+											</tr>
+											<tr>
+												<td><a href="https://www.amazon.com/gp/product/B0057OC5O8/ref=oh_aui_detailpage_o02_s00?ie=UTF8&psc=1">4 Channel Relay</a></td>
+												<td>$6.99</td>
 												<td>1</td>
-                                                <td>$6.00</td>
+                                                <td>$6.99</td>
 											</tr>
 											<tr>
-												<td><a href="https://www.ebay.com/itm/US-Ship-Nema-14-Stepper-Motor-18Ncm-0-8A-3D-Pinter-Makerbot-Reprap-CNC-Robot-OSM/331603049924?epid=1747924612&hash=item4d3514fdc4:g:hKMAAOSwu4BVmx94">NEMA 14 1.8 degree 12-24VDC  Stepper Motors</a></td>
-												<td>$8.60 </td>
-												<td>3</td>
-                                                <td>$25.8</td>
-											</tr>
-											<a href=""></a>
-											<tr>
-												<td><a href="https://www.ebay.com/itm/5pcs-DRV8825-Stepper-Motor-Driver-Module-for-RepRap-3D-Printer-StepStick-TE562/222256747450?epid=509244795&hash=item33bf88d3ba:g:F7YAAOSwwvBZnAyq">DRV8825 Stepper Motor Driver Module</a></td>
-												<td>$1.99</td>
-												<td>3</td>
-                                                <td>$5.98</td>
-											</tr>
-											<tr>
-												<td><a href="https://www.ebay.com/itm/MPU-6050-6-DOF-3-Axis-Accelerometer-Gyroscope-Sensor-Module-GY-521-for-Arduino/201004496054?epid=27003531553&hash=item2ecccd34b6:g:UjQAAOSwstxVXYz8">MPU-6050 6DOF Accelerometer</a></td>
-												<td>$1.23</td>
+												<td><a href="https://www.amazon.com/gp/product/B01NCOMFLT/ref=oh_aui_detailpage_o01_s00?ie=UTF8&psc=1">8mm Shaft (4 pk)</a></td>
+												<td>$9.49</td>
 												<td>1</td>
-                                                <td>$1.23</td>
-											</tr>
-												<tr>
-												<td>Avago Technologies Optical Encoder HEDS-5540-A02 (unused)</td>
-												<td>$15.00</td>
-												<td>3</td>
-                                                <td>$45.00</td>
+                                                <td>$9.49</td>
 											</tr>
 											<tr>
-												<td><a href="https://www.amazon.com/gp/product/B00S50PXCM/ref=oh_aui_detailpage_o07_s00?ie=UTF8&psc=1">RC Car Tie Rod Ends</a></td>
-												<td>$2.30</td>
-												<td>3</td>
-                                                <td>$6.90</td>
+												<td><a href="https://www.amazon.com/608-Bearings-Shielded-Miniature-Skateboard/dp/B07211VH78/ref=sr_1_6?ie=UTF8&qid=1541905516&sr=8-6&keywords=8mm+bearings&dpID=510jY2D0GnL&preST=_SX342_QL70_&dpSrc=srch">8mm Bearings (20pk)</a></td>
+												<td>$9.99</td>
+												<td>1</td>
+                                                <td>$9.99</td>
 											</tr>
 											<tr>
-												<td>Various M3 Hardware from Adam's Sock Drawer</td>
+												<td>Various breadboard and wires</td>
 												<td>$0.0</td>
 												<td>x</td>
                                                 <td>$0.00</td>
