--- a/Website/index.html
+++ b/Website/index.html
@@ -247,7 +247,7 @@
 								<h3 class="major">Appendix A</h3>
 									<p>The group approves this report for inclusion on the course website. This group approves the video for inclusion on the course YouTube channel.</p>
 								<h3 class="major">Appendix B: Commented Code</h3>
-								<a href="https://github.com/adamweld/microgoats_stewie">stewie_main.c</a><br><br>
+								<a href="https://github.com/ericinventor/RubiksCubeSolver/blob/master/Code/SolveRubik.py">SolveRubik.py</a><br><br>
 								<h3 class="major">Appendix C: Schematic</h3>
 								<img src="./files/FinalProjectSchematic.png" alt="toppic"  width = 750><br></center><br>						
 								<h3 class="major">Appendix D: Bill of Materials</h3>
@@ -327,9 +327,8 @@
 								</div>
 								<h3 class="major">Appendix E: Work Load Breakdown</h3>
 								<ol>
-									<li>Padraig Lysandrou: Dynamics/Algorithm Software, Electrical Hardware </li>
-									<li>Adam Weld: Table Design, Motor Driving Software</li>
-									<li>Eric Berg: Platform Design, Electrical Hardware</li>
+									<li>Eric Berg: CAD Design, Mechanical Construction and Assembly, Electircal Hardware, Hardware Testing </li>
+									<li>Yangyi (Ron) Hao: Camera Scanning Code, Algorithm Implementation, Moves Exectution Code, Testing </li>
 								</ol>
 
 								<h3 class="major">Appendix F: References</h3>
@@ -341,9 +340,9 @@
 								
                                     
 									<h3 class="major">Contact Information</h3>
-                                    <p>Padraig Lysandrou: <a href="mailto:PSL58@cornell.com?Subject=On the Stewart Platform" target="_top">PSL58@cornell.com</a></p>
-                                    <p>Adam Weld: <a href="mailto:AW698@cornell.edu?Subject=On the Stewart Platform" target="_top">AW698@cornell.edu</a></p>
-                                    <p>Eric Berg:  <a href="mailto:EB645@cornell.edu?Subject=On the Stewart Platform" target="_top">EB645@cornell.edu</a></p>
+                                    <p>Eric Berg:  <a href="mailto:EB645@cornell.edu?Subject=Robotic Rubik's Cube Solver" target="_top">EB645@cornell.edu</a>
+                                    <br>
+                                    Yangyi (Ron ) Hao:  <a href="mailto:yh326@cornell.edu?Subject=Robotic Rubik's Cube Solver" target="_top">yh326@cornell.edu</a></p>
 
                          <div class="close">Close</div></article>
 					</div>
