--- a/Website/index.html
+++ b/Website/index.html
@@ -210,17 +210,17 @@
                                 <br><br> The forth <a href="https://github.com/ericinventor/RubiksCubeSolver/blob/master/Code/ClawsTest.py">testing</a> was to test that our claws work correctly. We wrote ClawsTest.py for this purpose. It essentially calls the functions that runs our claws in MechanicalAPI.py, and we made sure that the claws motions were indeed in accordance to the purpose of those functions. We had some problems with the solenoids not fully retracting the claws, and the stepper motors error accumulating over time. The project would have been more successful if we were well aware with these issues beforehand and able to address them more effectively. In fact we are not yet able to resolve these and it’s part of our future works.</p>
 
 								<h3><b>Results </b></h3> 
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/MVO0t0BWCIU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								
 								<p> Overall, the individual components were mostly successful, as we were able to work out the scanning, the algorithm, and the motors. However, we weren’t quite able to achieve our original goal letting it solve a rubik, but given that the individual components were working, we can totally see it happening if we spend more time into perfecting our camera and motors.</p>
 								<p>We were able to run through the entire scanning procedure, which involved the stepper motors, the solenoids, and the camera. The problem was that the recognization was not very accurate and was not able to read the color of a few tiles. </p>
-								<iframe width="1186" height="667" src="https://www.youtube.com/embed/5qpJyRwzNjE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/5qpJyRwzNjE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                                	<p>We were also able to run a few simple algorithms on our rubik cube. </p>
-                               	<iframe width="1108" height="623" src="https://www.youtube.com/embed/Y8cuOUC6s5k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                               	<iframe width="560" height="315" src="https://www.youtube.com/embed/Y8cuOUC6s5k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-                               	<p>Here is a video that shows the rubik solver running an entire algorithm to solve the cube, but without the actual cube inside. As can be seen from the video, the errors on the stepper motors accumulate and in later stages, the claws were pretty far off from being perpenticular. [VIDEO]</p>
-	
-
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/MVO0t0BWCIU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                               	<p>Here is a video that shows the rubik solver running an entire algorithm to solve the cube, but without the actual cube inside. As can be seen from the video, the errors on the stepper motors accumulate and in later stages, the claws were pretty far off from being perpenticular.</p>
+                               	<iframe width="560" height="315" src="https://www.youtube.com/embed/vh5lJdPHdOY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 								
 							<div class="close">Close</div></article>
