--- a/Website/index.html
+++ b/Website/index.html
@@ -251,10 +251,9 @@
 								<h3 class="major">Appendix A</h3>
 									<p>The group approves this report for inclusion on the course website. This group approves the video for inclusion on the course YouTube channel.</p>
 								<h3 class="major">Appendix B: Commented Code</h3>
-								<a href="https://github.com/ericinventor/RubiksCubeSolver/blob/master/Code/SolveRubik.py">SolveRubik.py</a><br><br>
-								<h3 class="major">Appendix C: Schematic</h3>
-								<img src="./files/FinalProjectSchematic.png" alt="toppic"  width = 750><br></center><br>						
-								<h3 class="major">Appendix D: Bill of Materials</h3>
+								<a href="https://github.com/ericinventor/RubiksCubeSolver/blob/master/Code/SolveRubik.py">SolveRubik.py</a><br>	
+								<a href="https://github.com/ericinventor/RubiksCubeSolver">Full Git Repo</a><br><br>				
+								<h3 class="major">Appendix C: Bill of Materials</h3>
 								<div class="table-wrapper">
 									<table>
 										<thead>
@@ -329,13 +328,13 @@
 										</tfoot>
 									</table>
 								</div>
-								<h3 class="major">Appendix E: Work Load Breakdown</h3>
+								<h3 class="major">Appendix D: Work Load Breakdown</h3>
 								<ol>
 									<li>Eric Berg: CAD Design, Mechanical Construction and Assembly, Electircal Hardware, Hardware Testing </li>
 									<li>Yangyi (Ron) Hao: Camera Scanning Code, Algorithm Implementation, Moves Exectution Code, Testing </li>
 								</ol>
 
-								<h3 class="major">Appendix F: References</h3>
+								<h3 class="major">Appendix E: References</h3>
 							
 								<ul>
 									<li><a href="https://github.com/ericinventor/RubiksCubeSolver">Ronbergy Pi Git Repo (for this project)</a></li>
@@ -344,7 +343,6 @@
                                     <li><a href="http://kociemba.org/math/imptwophase.htm">Two Phase Algortithm Details</a></li>
                                     <li><a href="https://github.com/adrianliaw/PyCuber">PyCuber Git Repo</a></li>
                                     <li><a href="https://github.com/muodov/kociemba">Koceimba Git Repo</a></li>
-
 								</ul>
 
 								
