--- a/Website/index.html
+++ b/Website/index.html
@@ -326,7 +326,7 @@
 										<tfoot>
 											<tr>
 												<td colspan="3"></td>
-												<td>116.91</td>
+												<td>$139.41</td>
 											</tr>
 										</tfoot>
 									</table>
@@ -351,7 +351,7 @@
 								
                                     
 									<h3 class="major">Contact Information</h3>
-                                    <p>Eric Berg:  <a href="mailto:EB645@cornell.edu?Subject=Robotic Rubik's Cube Solver" target="_top">EB645@cornell.edu</a>
+                                    <p>Eric Berg:  <a href="mailto:eb645@cornell.edu?Subject=Robotic Rubik's Cube Solver" target="_top">EB645@cornell.edu</a>
                                     <br>
                                     Yangyi (Ron ) Hao:  <a href="mailto:yh326@cornell.edu?Subject=Robotic Rubik's Cube Solver" target="_top">yh326@cornell.edu</a></p>
 
